[gd_scene load_steps=7 format=3 uid="uid://c0qhfmp55b6ho"]

[ext_resource type="Script" uid="uid://nyfxi101u4vy" path="res://scripts/puzzle_gameplay.gd" id="1_w4ir0"]
[ext_resource type="Texture2D" uid="uid://d3r0nkxgm2vkn" path="res://assets/sprites/left_parts/LeftPart_Car_1.png" id="2_j2iho"]
[ext_resource type="Texture2D" uid="uid://mguea2au03ye" path="res://assets/sprites/center_models/CenterModel_Car_1_1.png" id="2_ywckx"]
[ext_resource type="Texture2D" uid="uid://bn61ygya85c8d" path="res://assets/sprites/right_parts/RightPart_Car_1.png" id="4_1b2l6"]
[ext_resource type="Script" uid="uid://cayvuy181hqbe" path="res://scripts/left_part.gd" id="4_red4f"]
[ext_resource type="Script" uid="uid://301qxt1d3krd" path="res://scripts/right_part.gd" id="6_uey8f"]

[node name="PuzzleGameplay" type="Node2D"]
script = ExtResource("1_w4ir0")

[node name="CenterModel" type="Sprite2D" parent="."]
position = Vector2(1288, 558)
texture = ExtResource("2_ywckx")

[node name="LeftPart" type="Sprite2D" parent="."]
position = Vector2(400, 572)
texture = ExtResource("2_j2iho")
script = ExtResource("4_red4f")

[node name="RightPart" type="Sprite2D" parent="."]
position = Vector2(2176, 556)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_1b2l6")
script = ExtResource("6_uey8f")
